[package]
name = "eci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.87"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1", features = ["full"] }
